--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,8 +14,12 @@
     "nodemon": "^2.0.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.95.2",
+    "knex-cleaner": "^1.3.1",
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.0.2"
   }
 }
